# El_Tercero

./: .clang-format  .gitattributes  .gitignore  FUNDING.yml  LICENSE  Makefile  README  README.md  README.org  Taskfile.yml  go.mod  meson.build
.github/workflows/: go.yml
lib/: lib.h
src/: contents.h  etr.c  etr.go  etr.h  fh.go  filecreation.c  filecreation.h  language.c  language.h  licenseText.h
src/fh/: fh.go
src/fh/templates/: bsd1.tmpl  bsd2.tmpl  bsd4.tmpl  c.meson.tmpl  cxx.meson.tmpl  cxxgl.meson.tmpl  gitignore.tmpl  hgignore.tmpl  main.cxx.tmpl  main.go.tmpl  mit.tmpl  premake5.cxx.tmpl
src/templates/: CMakeLibs.tmpl  CMakeLists.cxx.tmpl  CMakeLists.tmpl  FUNDING.tmpl  MakeC.tmpl  MakeCxx.tmpl  MakeCxxEmb.tmpl  README.tmpl  READMEORG.tmpl  bsd3.tmpl  buildzig.tmpl  c.meson.tmpl  cargo.toml.tmpl  cxx.meson.tmpl  gitignore.tmpl  main.c.tmpl  main.rs.tmpl  mainzig.tmpl  manifest.tmpl  manifest.yml  premake5.tmpl  rustfmt.toml.tmpl  taskfile.tmpl
